fewd/moviefavorites/css/style.css
* {
  /*outline: 1px solid red;*/
}

.hidden {
  display: none;
}

.content-wrapper {
  display: flex;
  flex-direction: row;;
}

body {
  background-color: #3A3A3A;
  color: white;
}

main {
  max-width: 1075px;
  margin: 0 auto;
}

header h1 {
  font-size: 36px;
  text-align: center;
}

.movies-view {
  padding: 25px;
}

.movie-posters,
.movie-poster-images,
.movie-info {
  flex: 1;
}

img {
  height: 208px;
  margin: 12px;
}

table {
  margin-top: 56px;
}

th {
  text-align: left;
  padding: 5px;
}

.movie-search-list form {
  margin: 0 auto;
  width: 314px;
}

.movie-search-list ul {
  padding: 0;
  width: 300px;
}

.movie-search-list li {
  list-style-type: none;
  margin: 12px 0;
  padding: 6px;
  width: 92%;
}

.movie-search-list input {
  padding: 5px;
  width: 100%;
}

input[type=submit],
button {
  background-color: #049BD7;
  border-radius: 5px;
  border: 1px solid #0A86B7;
  color: white;
  font-weight: 600;
  height: 40px;
  width: 100%;
}

button {
  width: 150px;
}

footer a {
  color: #B4B4B4;
  font-size: 14px;
}

footer .github-source {
  color: #B4B4B4;
  font-size: 14px;
  margin-top: 32px;
  text-align: center;
}

footer .fa-github {
  font-size: 18px;
  margin-right: 2px;
}

@media (max-width: 768px) {
  header h1 {
    font-size: 30px;
  }

  .content-wrapper {
    flex-direction: column-reverse;;
  }

  table {
    margin-left: 0;
    margin-top: 0;
  }

  img {
    height: 50px;
    margin: 6px;
  }

  button {
    width: 100%;
    margin-top: 24px;
  }

  .movie-poster-images {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }

  .movie-view {
    margin: 0 25px;
  }

  .movies-view {
    padding: 0 25px 25px
  }
}

